--- a/Data Science.ipynb
+++ b/Data Science.ipynb
@@ -276,6 +276,28 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "**Data Science Project Scoping Guide**\n",
+    "\n",
+    "- Step 1: Goals – Define the goal(s) of the project; Scop Defineste obiectivul proiectului. \n",
+    "- Step 2: Actions – What actions/interventions do you have that this project will inform?; Actiuni Ce actiuni/interventii aveti pe care acest proiect le va informa?\n",
+    "- Step 3: Data – What data do you have access to internally? What data do you need? What can you augment from external and/or public sources?; Date La ce date ai acces intern? Ce date ai nevoie? Ce puteti adauga din surce publice sau externe?\n",
+    "- Step 4: Analysis – What analysis needs to be done? Does it involve description, detection, prediction, or behavior change? How will the analysis be validated?; Analiza Ce analize trebuie facute? Implica descriere, detectare, predictie, or schimbare de comportament? Cum va fi validata analiza?\n",
+    "- Ethical Considerations :  What are the privacy, transparency, discrimination/equity, and accountability issues around this project and how will you tackle them?; Consideratii etice Care sunt problemele private, discriminare/echitate, si responsabilitatile din jurul proiectului si cum le vei aborda?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
